--- a/_config.yml
+++ b/_config.yml
@@ -32,9 +32,9 @@ url: 'https://www.data8.org' # the hostname & protocol for your site, e.g. http:
 # TODO(setup): Set all of these course variables
 course: Data 8
 course_email: data8@berkeley.edu
-gradescope_course_id: 952061 # you can find this in the Gradescope URL after /courses
-bcourses_course_id: 1542000 # Same as above, but for bCourses. Leave blank if not in use...
-ed_course_id: 73504 # Again, same as above.
+gradescope_course_id: 1042415 # you can find this in the Gradescope URL after /courses
+bcourses_course_id: 0000 # Same as above, but for bCourses. Leave blank if not in use...
+ed_course_id: 79204 # Again, same as above.
 sememster: su25 # set for the current seemester
 # This should be one of eecs, dsus, stat
 # (Future) This will control some footer text, and later custom styling.
@@ -49,8 +49,8 @@ class_archive_path: /
 # TODO(setup): Set these auxiliary links as you wish - they show up on the top right
 aux_links:
   # TODO(template): Move this to be built-in.
-  # Ed:
-  #   - 'https://edstem.org/us/courses/64093/discussion/'
+  Ed:
+    - 'https://edstem.org/us/courses/79204/discussion'
   OH Queue:
     - 'https://oh.data8.org/'
   Textbook:
