add lec01 slides and demo

--- a/_config.yml
+++ b/_config.yml
@@ -249,21 +249,21 @@ links:
     proj3: "Project 3: Movie Classification"
   lec:
     demo:
-      demo: "[Demo]()"
-      demo01: "&#8226; [Demo]()"
+      demo: "[Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-sp25/lec/lec01/lec01.ipynb&branch=main)"
+      demo01: ""
       demo02: ""
-      demo03: "&#8226; [Demo]()"
-      demo04: "&#8226; [Demo]()"
-      demo05: "&#8226; [Demo]()"
-      demo06: "&#8226; [Demo]()"
-      demo07: "&#8226; [Demo]()"
-      demo08: "&#8226; [Demo]()"
-      demo09: "&#8226; [Demo]()"
-      demo10: "&#8226; [Demo]()"
-      demo11: "&#8226; [Demo]()"
-      demo12: "&#8226; [Demo]()"
-      demo13: "&#8226; [Demo]()"
-      demo14: "&#8226; [Demo]()"
+      demo03: ""
+      demo04: ""
+      demo05: ""
+      demo06: ""
+      demo07: ""
+      demo08: ""
+      demo09: ""
+      demo10: ""
+      demo11: ""
+      demo12: ""
+      demo13: ""
+      demo14: ""
       demo15: ""
       demo16: ""
       demo17: ""
@@ -295,46 +295,46 @@ links:
       demo43: ""
     slides:
       slide: "[Slides]()"
-      slide01: "[Slides]()"
-      slide02: "[Slides]()"
-      slide03: "[Slides]()"
-      slide04: "[Slides]()"
-      slide05: "[Slides]()"
-      slide06: "[Slides]()"
-      slide07: "[Slides]()"
-      slide08: "[Slides]()"
-      slide09: "[Slides]()"
-      slide10: "[Slides]()"
-      slide11: "[Slides]()"
-      slide12: "[Slides]()"
-      slide13: "[Slides]()"
-      slide14: "[Slides]()"
-      slide15: "[Slides]()"
-      slide16: "[Slides]()"
-      slide17: "[Slides]()"
-      slide18: "[Slides]()"
-      slide19: "[Slides]()"
-      slide20: "[Slides]()"
-      slide21: "[Slides]()"
-      slide22: "[Slides]()"
-      slide23: "[Slides]()"
-      slide24: "[Slides]()"
-      slide25: "[Slides]()"
-      slide26: "[Slides]()"
-      slide27: "[Slides]()"
-      slide28: "[Slides]()"
-      slide29: "[Slides]()"
-      slide30: "[Slides]()"
-      slide31: "[Slides]()"
-      slide32: "[Slides]()"
-      slide33: "[Slides]()"
-      slide34: "[Slides]()"
-      slide35: "[Slides]()"
-      slide36: "[Slides]()"
-      slide37: "[Slides]()"
-      slide38: "[Slides]()"
-      slide39: "[Slides]()"
-      slide40: "[Slides]()"
-      slide41: "[Slides]()"
-      slide42: "[Slides]()"
-      slide43: "[Slides]()"
+      slide01: "[Slides](https://docs.google.com/presentation/d/1Rg3tyM3b68n8Ko5OzsnnvXSbeP-HARD5WlLKUfXXCFk/edit?usp=sharing)"
+      slide02: "Slides"
+      slide03: "Slides"
+      slide04: "Slides"
+      slide05: "Slides"
+      slide06: "Slides"
+      slide07: "Slides"
+      slide08: "Slides"
+      slide09: "Slides"
+      slide10: "Slides"
+      slide11: "Slides"
+      slide12: "Slides"
+      slide13: "Slides"
+      slide14: "Slides"
+      slide15: "Slides"
+      slide16: "Slides"
+      slide17: "Slides"
+      slide18: "Slides"
+      slide19: "Slides"
+      slide20: "Slides"
+      slide21: "Slides"
+      slide22: "Slides"
+      slide23: "Slides"
+      slide24: "Slides"
+      slide25: "Slides"
+      slide26: "Slides"
+      slide27: "Slides"
+      slide28: "Slides"
+      slide29: "Slides"
+      slide30: "Slides"
+      slide31: "Slides"
+      slide32: "Slides"
+      slide33: "Slides"
+      slide34: "Slides"
+      slide35: "Slides"
+      slide36: "Slides"
+      slide37: "Slides"
+      slide38: "Slides"
+      slide39: "Slides"
+      slide40: "Slides"
+      slide41: "Slides"
+      slide42: "Slides"
+      slide43: "Slides"
