--- a/_config.yml
+++ b/_config.yml
@@ -297,7 +297,7 @@ links:
     slides:
       slide: "Slides"
       slide01: "[Slides](https://docs.google.com/presentation/d/1Rg3tyM3b68n8Ko5OzsnnvXSbeP-HARD5WlLKUfXXCFk/edit?usp=sharing)"
-      slide02: "Slides"
+      slide02: "[Slides](https://docs.google.com/presentation/d/1Q_lmvS8L5lO1RrJ-KBBuKNAQrW9iBCPaQLsmKHAaWJc/edit)"
       slide03: "Slides"
       slide04: "Slides"
       slide05: "Slides"
