--- a/_config.yml
+++ b/_config.yml
@@ -198,7 +198,7 @@ exclude:
 
 links:
   hw:
-    hw01: "Homework 01"
+    hw01: "[Homework 01](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-8%2Fmaterials-su25&urlpath=tree%2Fmaterials-su25%2Fhw%2Fhw01%2Fhw01.ipynb)"
     hw02: "Homework 02"
     hw03: "Homework 03"
     hw04: "Homework 04"
