--- a/_config.yml
+++ b/_config.yml
@@ -253,7 +253,7 @@ links:
       demo: "&#8226; Demo"
       demo01: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec01/lec01.ipynb&branch=main)"
       demo02: ""
-      demo03: ""
+      demo03: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec03/lec03.ipynb&branch=main)"
       demo04: ""
       demo05: ""
       demo06: ""
@@ -298,7 +298,7 @@ links:
       slide: "Slides"
       slide01: "[Slides](https://docs.google.com/presentation/d/1Rg3tyM3b68n8Ko5OzsnnvXSbeP-HARD5WlLKUfXXCFk/edit?usp=sharing)"
       slide02: "[Slides](https://docs.google.com/presentation/d/1Q_lmvS8L5lO1RrJ-KBBuKNAQrW9iBCPaQLsmKHAaWJc/edit)"
-      slide03: "Slides"
+      slide03: "[Slides](https://docs.google.com/presentation/d/1k3YSZn0Cuxh_kD_iYj5i_pTPgIm2GZe4ysVlQvOHJzU/edit?usp=sharing)"
       slide04: "Slides"
       slide05: "Slides"
       slide06: "Slides"
