--- a/_config.yml
+++ b/_config.yml
@@ -231,7 +231,7 @@ links:
   wksht:
     worksheet: "Worksheet"
     wksht01: "[Worksheet 01](https://drive.google.com/file/d/1oMV5199GMcNbEhZ-OTh61nlcBRMJEVQk/view?usp=sharing)"
-    wksht02: "[Worksheet 02](https://drive.google.com/file/d/17_WX17hzjEOANODNEyI21PfrfuAcjabX/view?usp=sharing)"
+    wksht02: "[Worksheet 02](https://drive.google.com/file/d/1aSJbtcEQZxrvHYSL37k-nSb83oBCVCwi/view)"
     wksht03: "[Worksheet 03](https://drive.google.com/file/d/1vsA0062Xfht3cmmmmSa94DDjGusdltu5/view?usp=sharing)"
     wksht04: "[Worksheet 04](https://drive.google.com/file/d/1NnoeLPcFKasfAX3k0nZeWu3jN1li_NDA/view?usp=sharing)"
     wksht05: "[Worksheet 05](https://drive.google.com/file/d/1xG_o0mZZMFARmy6YTzsNMq2Jjcqq0DzO/view?usp=sharing)"
