--- a/_config.yml
+++ b/_config.yml
@@ -245,7 +245,7 @@ links:
     wksht13: "Worksheet 13"
     wksht14: "Worksheet 14"
   proj:
-    proj1: "Project 1: World Population and Poverty"
+    proj1: "[Project 1: World Population and Poverty](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-8%2Fmaterials-su25&branch=main&urlpath=tree%2Fmaterials-su25%2Fproject%2Fproject1%2Fproject1.ipynb)"
     proj2: "Project 2: Climate"
     proj3: "Project 3: Movie Classification"
   lec:
