--- a/_config.yml
+++ b/_config.yml
@@ -215,7 +215,7 @@ links:
     lab01: "[Lab 01](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-8%2Fmaterials-su25&branch=main&urlpath=tree%2Fmaterials-su25%2Flab%2Flab01%2Flab01.ipynb)"
     lab02: "[Lab 02](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-8%2Fmaterials-su25&branch=main&urlpath=tree%2Fmaterials-su25%2Flab%2Flab02%2Flab02.ipynb)"
     lab03: "[Lab 03](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-8%2Fmaterials-su25&branch=main&urlpath=tree%2Fmaterials-su25%2Flab%2Flab03%2Flab03.ipynb)"
-    lab04: "Lab 04"
+    lab04: "[Lab 04](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-8%2Fmaterials-su25&branch=main&urlpath=tree%2Fmaterials-su25%2Flab%2Flab04%2Flab04.ipynb)"
     lab05: "Lab 05"
     lab06: "Lab 06"
     lab07: "Lab 07"
@@ -232,8 +232,8 @@ links:
     worksheet: "Worksheet"
     wksht01: "[Worksheet 01](https://drive.google.com/file/d/1oMV5199GMcNbEhZ-OTh61nlcBRMJEVQk/view?usp=sharing)"
     wksht02: "[Worksheet 02](https://drive.google.com/file/d/1aSJbtcEQZxrvHYSL37k-nSb83oBCVCwi/view)"
-    wksht03: "[Worksheet 03](https://drive.google.com/file/d/1vsA0062Xfht3cmmmmSa94DDjGusdltu5/view?usp=sharing)"
-    wksht04: "[Worksheet 04](https://drive.google.com/file/d/1NnoeLPcFKasfAX3k0nZeWu3jN1li_NDA/view?usp=sharing)"
+    wksht03: "[Worksheet 03](https://drive.google.com/file/d/1Um5_31wN75Zynkcfrz7-D3zk7zxsQ6Q1/view)"
+    wksht04: "[Worksheet 04](https://drive.google.com/file/d/16F5GBgy6qvBLYHdnb-WC5XHWVeoKtmsb/view?usp=sharing)"
     wksht05: "[Worksheet 05](https://drive.google.com/file/d/1xG_o0mZZMFARmy6YTzsNMq2Jjcqq0DzO/view?usp=sharing)"
     wksht06: "[Worksheet 06](https://drive.google.com/file/d/18OH6J1OSAghOdQoKLFZwAC6R3isBqfNk/view?usp=sharing)"
     wksht07: "Worksheet 07"
