--- a/_config.yml
+++ b/_config.yml
@@ -216,7 +216,7 @@ links:
     lab02: "[Lab 02](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-8%2Fmaterials-su25&branch=main&urlpath=tree%2Fmaterials-su25%2Flab%2Flab02%2Flab02.ipynb)"
     lab03: "[Lab 03](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-8%2Fmaterials-su25&branch=main&urlpath=tree%2Fmaterials-su25%2Flab%2Flab03%2Flab03.ipynb)"
     lab04: "[Lab 04](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-8%2Fmaterials-su25&branch=main&urlpath=tree%2Fmaterials-su25%2Flab%2Flab04%2Flab04.ipynb)"
-    lab05: "Lab 05"
+    lab05: "[Lab 05](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-8%2Fmaterials-su25&branch=main&urlpath=tree%2Fmaterials-su25%2Flab%2Flab05%2Flab05.ipynb)"
     lab06: "Lab 06"
     lab07: "Lab 07"
     lab08: "Lab 08"
@@ -234,7 +234,7 @@ links:
     wksht02: "[Worksheet 02](https://drive.google.com/file/d/1aSJbtcEQZxrvHYSL37k-nSb83oBCVCwi/view)"
     wksht03: "[Worksheet 03](https://drive.google.com/file/d/1Um5_31wN75Zynkcfrz7-D3zk7zxsQ6Q1/view)"
     wksht04: "[Worksheet 04](https://drive.google.com/file/d/16F5GBgy6qvBLYHdnb-WC5XHWVeoKtmsb/view?usp=sharing)"
-    wksht05: "[Worksheet 05](https://drive.google.com/file/d/1xG_o0mZZMFARmy6YTzsNMq2Jjcqq0DzO/view?usp=sharing)"
+    wksht05: "[Worksheet 05](https://drive.google.com/file/d/1eMqdUsL84NCPkC5q9DCD0ceoiAsViE1g/view)"
     wksht06: "[Worksheet 06](https://drive.google.com/file/d/18OH6J1OSAghOdQoKLFZwAC6R3isBqfNk/view?usp=sharing)"
     wksht07: "Worksheet 07"
     wksht08: "Worksheet 08"
