--- a/_config.yml
+++ b/_config.yml
@@ -261,7 +261,7 @@ links:
       demo08: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec08/lec08.ipynb&branch=main)"
       demo09: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec09/lec09.ipynb&branch=main)"
       demo10: ""
-      demo11: ""
+      demo11: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec11/lec11.ipynb&branch=main)"
       demo12: ""
       demo13: ""
       demo14: ""
