--- a/_config.yml
+++ b/_config.yml
@@ -217,7 +217,7 @@ links:
     lab03: "[Lab 03](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-8%2Fmaterials-su25&branch=main&urlpath=tree%2Fmaterials-su25%2Flab%2Flab03%2Flab03.ipynb)"
     lab04: "[Lab 04](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-8%2Fmaterials-su25&branch=main&urlpath=tree%2Fmaterials-su25%2Flab%2Flab04%2Flab04.ipynb)"
     lab05: "[Lab 05](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-8%2Fmaterials-su25&branch=main&urlpath=tree%2Fmaterials-su25%2Flab%2Flab05%2Flab05.ipynb)"
-    lab06: "Lab 06"
+    lab06: "Lab 06()"
     lab07: "Lab 07"
     lab08: "Lab 08"
     lab09: "Lab 09"
