--- a/_config.yml
+++ b/_config.yml
@@ -264,7 +264,7 @@ links:
       demo11: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec11/lec11.ipynb&branch=main)"
       demo12: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec12/lec12.ipynb&branch=main)"
       demo13: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec13/lec13.ipynb&branch=main)"
-      demo14: ""
+      demo14: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec14/lec14.ipynb&branch=main)"
       demo15: ""
       demo16: ""
       demo17: ""
@@ -309,7 +309,7 @@ links:
       slide11: "Slides"
       slide12: "[Slides](https://docs.google.com/presentation/d/1PeGiEe29n6bAX_mAeOrffRm1NvI21KLJYL8u5NBiCmQ)"
       slide13: "[Slides](https://docs.google.com/presentation/d/1g03KPmT194s3jw4BKNBKM4tL-krjWhBBtlL0CgQ7qik)"
-      slide14: "Slides"
+      slide14: "[Slides](https://docs.google.com/presentation/d/1PSduHebl6HyV0nF35BXX67Vp-BsA4AGtd4FI1Xa-s9o)"
       slide15: "Slides"
       slide16: "Slides"
       slide17: "Slides"
