--- a/_config.yml
+++ b/_config.yml
@@ -235,7 +235,7 @@ links:
     wksht03: "[Worksheet 03](https://drive.google.com/file/d/1Um5_31wN75Zynkcfrz7-D3zk7zxsQ6Q1/view)"
     wksht04: "[Worksheet 04](https://drive.google.com/file/d/16F5GBgy6qvBLYHdnb-WC5XHWVeoKtmsb/view?usp=sharing)"
     wksht05: "[Worksheet 05](https://drive.google.com/file/d/1eMqdUsL84NCPkC5q9DCD0ceoiAsViE1g/view)"
-    wksht06: "[Worksheet 06](https://drive.google.com/file/d/18OH6J1OSAghOdQoKLFZwAC6R3isBqfNk/view?usp=sharing)"
+    wksht06: "[Worksheet 06](https://drive.google.com/file/d/14QYUxaonM-MGxxC-rdl8F3Z1gjUK72SM/view)"
     wksht07: "Worksheet 07"
     wksht08: "Worksheet 08"
     wksht09: "Worksheet 09"
@@ -266,7 +266,7 @@ links:
       demo13: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec13/lec13.ipynb&branch=main)"
       demo14: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec14/lec14.ipynb&branch=main)"
       demo15: ""
-      demo16: ""
+      demo16: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec16/lec16.ipynb&branch=main)"
       demo17: ""
       demo18: ""
       demo19: ""
@@ -311,7 +311,7 @@ links:
       slide13: "[Slides](https://docs.google.com/presentation/d/1g03KPmT194s3jw4BKNBKM4tL-krjWhBBtlL0CgQ7qik)"
       slide14: "[Slides](https://docs.google.com/presentation/d/1PSduHebl6HyV0nF35BXX67Vp-BsA4AGtd4FI1Xa-s9o)"
       slide15: "Slides"
-      slide16: "Slides"
+      slide16: "[Slides](https://docs.google.com/presentation/d/13ausLd2xSx99tPhGTZiHu9kabN2XiWbCprF_9qGVvWg/edit?usp=sharing)"
       slide17: "Slides"
       slide18: "Slides"
       slide19: "Slides"
