adjusted lab schedule

--- a/_config.yml
+++ b/_config.yml
@@ -229,7 +229,7 @@ links:
     lab15: "Lab 15"
     lab16: "Lab 16"
   wksht:
-    worksheet: "Worksheet"
+    worksheet: "Midterm Review Worksheet"
     wksht01: "[Worksheet 01](https://drive.google.com/file/d/1oMV5199GMcNbEhZ-OTh61nlcBRMJEVQk/view?usp=sharing)"
     wksht02: "[Worksheet 02](https://drive.google.com/file/d/1aSJbtcEQZxrvHYSL37k-nSb83oBCVCwi/view)"
     wksht03: "[Worksheet 03](https://drive.google.com/file/d/1Um5_31wN75Zynkcfrz7-D3zk7zxsQ6Q1/view)"
