--- a/_config.yml
+++ b/_config.yml
@@ -267,7 +267,7 @@ links:
       demo14: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec14/lec14.ipynb&branch=main)"
       demo15: ""
       demo16: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec16/lec16.ipynb&branch=main)"
-      demo17: ""
+      demo17: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec17/lec17.ipynb&branch=main)"
       demo18: ""
       demo19: ""
       demo20: ""
@@ -312,7 +312,7 @@ links:
       slide14: "[Slides](https://docs.google.com/presentation/d/1PSduHebl6HyV0nF35BXX67Vp-BsA4AGtd4FI1Xa-s9o)"
       slide15: "Slides"
       slide16: "[Slides](https://docs.google.com/presentation/d/13ausLd2xSx99tPhGTZiHu9kabN2XiWbCprF_9qGVvWg/edit?usp=sharing)"
-      slide17: "Slides"
+      slide17: "[Slides](https://docs.google.com/presentation/d/1vRQfs5ou0UW46M_FopDUphxPiyOTC1geO0kL7DGzEyY/edit?usp=sharing)"
       slide18: "Slides"
       slide19: "Slides"
       slide20: "Slides"
