--- a/_config.yml
+++ b/_config.yml
@@ -236,7 +236,7 @@ links:
     wksht04: "[Worksheet 04](https://drive.google.com/file/d/16F5GBgy6qvBLYHdnb-WC5XHWVeoKtmsb/view?usp=sharing)"
     wksht05: "[Worksheet 05](https://drive.google.com/file/d/1eMqdUsL84NCPkC5q9DCD0ceoiAsViE1g/view)"
     wksht06: "[Worksheet 06](https://drive.google.com/file/d/14QYUxaonM-MGxxC-rdl8F3Z1gjUK72SM/view)"
-    wksht07: "Worksheet 07"
+    wksht07: "[Worksheet 07](https://drive.google.com/file/d/1gOBL9g32xFZPqUG9tnsykI0HHEetPNEx/view?usp=sharing)"
     wksht08: "Worksheet 08"
     wksht09: "Worksheet 09"
     wksht10: "Worksheet 10"
