--- a/_config.yml
+++ b/_config.yml
@@ -268,7 +268,7 @@ links:
       demo15: ""
       demo16: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec16/lec16.ipynb&branch=main)"
       demo17: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec17/lec17.ipynb&branch=main)"
-      demo18: ""
+      demo18: "&#8226; [Demo](https://data8.datahub.berkeley.edu/hub/user-redirect/git-pull?repo=https://github.com/data-8/materials-su25&urlpath=tree/materials-su25/lec/lec18/lec18.ipynb&branch=main)"
       demo19: ""
       demo20: ""
       demo21: ""
@@ -313,7 +313,7 @@ links:
       slide15: "Slides"
       slide16: "[Slides](https://docs.google.com/presentation/d/13ausLd2xSx99tPhGTZiHu9kabN2XiWbCprF_9qGVvWg/edit?usp=sharing)"
       slide17: "[Slides](https://docs.google.com/presentation/d/1vRQfs5ou0UW46M_FopDUphxPiyOTC1geO0kL7DGzEyY/edit?usp=sharing)"
-      slide18: "Slides"
+      slide18: "[Slides](https://docs.google.com/presentation/d/11dBgg3rK-vFFIraWNjjNNvrgjcCVfEWLjT8Ue5cqozg/edit?usp=sharing)"
       slide19: "Slides"
       slide20: "Slides"
       slide21: "Slides"
