--- a/_config.yml
+++ b/_config.yml
@@ -317,7 +317,7 @@ links:
       slide17: "[Slides](https://docs.google.com/presentation/d/1vRQfs5ou0UW46M_FopDUphxPiyOTC1geO0kL7DGzEyY/edit?usp=sharing)"
       slide18: "[Slides](https://docs.google.com/presentation/d/11dBgg3rK-vFFIraWNjjNNvrgjcCVfEWLjT8Ue5cqozg/edit?usp=sharing)"
       slide19: "[Slides](https://docs.google.com/presentation/d/1uIF-6pjuMviaEzHZIVvoD54lgmT9vzeZ5nSb_hdRfr4/edit?usp=sharing)"
-      slide20: "Slides"
+      slide20: "[Slides](https://docs.google.com/presentation/d/1w5F5JBX063iLlNjxmPc8_SIJxz29rSw3lbwMDGbbvJ8/edit?usp=sharing)"
       slide21: "Slides"
       slide22: "Slides"
       slide23: "Slides"
